--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -1,6 +1,6 @@
-<div class="container animated fadeIn">
+<div class="animated fadeIn">
     <!-- <mat-toolbar color="accent" mat-elevation-z2></mat-toolbar> -->
-    <div class="table-container mat-elevation-z5">
+    <div class="table-container mat-elevation-z20">
         <button mat-fab color="primary" class="add-button" (click)="save(row)">
             <mat-icon>add</mat-icon>
         </button>
