Solucionado el error que hacia que al darle al boton atras despues de cerrar sesión se pudiese acceder al dashboard

--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -5,8 +5,8 @@
             <mat-icon>add</mat-icon>
         </button>
     
-        <div class="table-loading-shade" *ngIf="isLoadingResults">
-            <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+        <div class="table-loading-shade" *ngIf="isLoading">
+            <mat-spinner *ngIf="isLoading"></mat-spinner>
         </div>
         
         <div class="table-header">
