--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -32,15 +32,15 @@
     <mat-sidenav-container class="sidenav-container">
         <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches">
             <mat-nav-list>
-                <a mat-list-item routerLink="/">
+                <a mat-list-item routerLink="/home">
                     <i class="material-icons">person</i>&nbsp;Personas
                 </a>
 
-                <a mat-list-item routerLink="/contact-us">
+                <a mat-list-item routerLink="/home/contact-us">
                     <i class="material-icons">email</i>&nbsp;Contactanos
                 </a>
 
-                <a mat-list-item routerLink="/table">
+                <a mat-list-item routerLink="/home/table">
                     <i class="material-icons">web</i>&nbsp;Tablas
                 </a>
             </mat-nav-list>
