Correcciones criticas de seguridad en la validación de sesiones

--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -43,6 +43,10 @@
                 <a mat-list-item routerLink="/home/table">
                     <i class="material-icons">web</i>&nbsp;Tablas
                 </a>
+
+                <a mat-list-item routerLink="/404">
+                    <i class="material-icons">error_outline</i>&nbsp;Error page
+                </a>
             </mat-nav-list>
         </mat-sidenav>
 
