--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -2,7 +2,7 @@
     <h2>ERROR #404</h2>
     <img src="../../../../assets/img/404.jpg">
     <br/><br/><br/>
-    <button mat-raised-button color="warn" routerLink="/home">
+    <button mat-raised-button color="warn" routerLink="/">
         <span>REGRESAR</span><mat-icon aria-label="icon-button">directions_walk</mat-icon>
     </button>
 </div>
