--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -1,70 +1,67 @@
-<div class="animated fadeIn">
-    <!-- <mat-toolbar color="accent" mat-elevation-z2></mat-toolbar> -->
-    <div class="table-container mat-elevation-z20">
-        <button mat-fab color="primary" class="add-button" (click)="save(row)">
-            <mat-icon>add</mat-icon>
-        </button>
-    
-        <div class="table-loading-shade" *ngIf="isLoading">
-            <mat-spinner *ngIf="isLoading"></mat-spinner>
-        </div>
-        
-        <div class="table-header">
-            <mat-form-field class="filter-field">
-                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-            </mat-form-field>
-        </div>
+<div class="animated fadeIn table-container mat-elevation-z20">
+    <button mat-fab color="primary" class="add-button" (click)="save(row)">
+        <mat-icon>add</mat-icon>
+    </button>
 
-        <mat-table #table [dataSource]="dataSource" class="person-table"
-        matSort matSortActive="name" matSortDisableClear matSortDirection="asc">
-
-            <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.name }}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="age">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Age</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.age }}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="gender">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Gender</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.gender }}</mat-cell>
-            </ng-container>
-
-            <!-- State Column -->
-            <!-- <ng-container matColumnDef="active">
-                <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.active }}</mat-cell>
-            </ng-container> -->
-
-            <!-- actions-->
-            <ng-container matColumnDef="personid">
-                <mat-header-cell *matHeaderCellDef>
-                    Actions
-                </mat-header-cell>
-
-                <mat-cell *matCellDef="let row">
-                    <div class="button-row">
-                        <a mat-icon-button color='accent' (click)="edit(row)">
-                            <mat-icon aria-label="Edit">create</mat-icon>
-                        </a>
-                        <a mat-icon-button color='warn' (click)="delete(row)" >
-                            <mat-icon aria-label="Delete">clear</mat-icon>
-                        </a>
-                    </div>
-                </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-        <mat-paginator 
-            [pageSizeOptions]="pageSizeOptions" 
-            [length]="totalItems" 
-            [pageSize]="pageSize"
-            (page)="onPaginateChange($event)">
-        </mat-paginator>
+    <div class="table-loading-shade" *ngIf="isLoading">
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
     </div>
+    
+    <div class="table-header">
+        <mat-form-field class="filter-field">
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+    </div>
+
+    <mat-table #table [dataSource]="dataSource" class="person-table"
+    matSort matSortActive="name" matSortDisableClear matSortDirection="asc">
+
+        <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.name }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="age">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Age</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.age }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="gender">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Gender</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.gender }}</mat-cell>
+        </ng-container>
+
+        <!-- State Column -->
+        <!-- <ng-container matColumnDef="active">
+            <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.active }}</mat-cell>
+        </ng-container> -->
+
+        <!-- actions-->
+        <ng-container matColumnDef="personid">
+            <mat-header-cell *matHeaderCellDef>
+                Actions
+            </mat-header-cell>
+
+            <mat-cell *matCellDef="let row">
+                <div class="button-row">
+                    <a mat-icon-button color='accent' (click)="edit(row)">
+                        <mat-icon aria-label="Edit">create</mat-icon>
+                    </a>
+                    <a mat-icon-button color='warn' (click)="delete(row)" >
+                        <mat-icon aria-label="Delete">clear</mat-icon>
+                    </a>
+                </div>
+            </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+    <mat-paginator 
+        [pageSizeOptions]="pageSizeOptions" 
+        [length]="totalItems" 
+        [pageSize]="pageSize"
+        (page)="onPaginateChange($event)">
+    </mat-paginator>
 </div>
