Añadido el dashboard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,66 @@
-<p>
-  dashboard works!
-</p>
+<div class="animated fadeIn dashboard">
+    <mat-card class="dashboard-item item-teal float-item" routerLink="/person">
+        <i class="material-icons dashboard-icon">person</i>
+        <mat-card-header>
+            <mat-card-title><h1>Personas</h1></mat-card-title>
+            <mat-card-subtitle># personas</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+    <mat-card class="dashboard-item item-brown float-item">
+        <i class="material-icons dashboard-icon">verified_user</i>
+        <mat-card-header>
+            <mat-card-title><h1>Usuarios</h1></mat-card-title>
+            <mat-card-subtitle># usuarios</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+    <mat-card class="dashboard-item item-purple float-item">
+        <i class="material-icons dashboard-icon">portrait</i>
+        <mat-card-header>
+            <mat-card-title><h1>Fotos</h1></mat-card-title>
+            <mat-card-subtitle># fotos</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+    <mat-card class="dashboard-item item-yellow float-item">
+        <i class="material-icons dashboard-icon">remove_red_eye</i>
+        <mat-card-header>
+            <mat-card-title><h1>Visitas</h1></mat-card-title>
+            <mat-card-subtitle># visitas</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+    <mat-card class="dashboard-item item-violet float-item">
+        <i class="material-icons dashboard-icon">show_chart</i>
+        <mat-card-header>
+            <mat-card-title><h1>Estadisticas</h1></mat-card-title>
+            <mat-card-subtitle># estadisticas</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+    <mat-card class="dashboard-item item-pink float-item">
+        <i class="material-icons dashboard-icon">file_download</i>
+        <mat-card-header>
+            <mat-card-title><h1>Descargas</h1></mat-card-title>
+            <mat-card-subtitle># descargas</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+
+    <mat-card class="dashboard-item item-blue float-item">
+        <i class="material-icons dashboard-icon">directions</i>
+        <mat-card-header>
+            <mat-card-title><h1>Direcciones</h1></mat-card-title>
+            <mat-card-subtitle># direcciones</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+
+    <mat-card class="dashboard-item item-green float-item">
+        <i class="material-icons dashboard-icon">picture_as_pdf</i>
+        <mat-card-header>
+            <mat-card-title><h1>Reportes</h1></mat-card-title>
+            <mat-card-subtitle># reportes</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+</div>
