--- a/src/app/modules/admin-layout/admin-layout.component.html
+++ b/src/app/modules/admin-layout/admin-layout.component.html
@@ -33,6 +33,10 @@
         <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"[fixedInViewport]="mobileQuery.matches">
             <mat-nav-list>
                 <a mat-list-item routerLink="/">
+                    <i class="material-icons">dashboard</i>&nbsp;Dashboard
+                </a>
+
+                <a mat-list-item routerLink="/person">
                     <i class="material-icons">person</i>&nbsp;Personas
                 </a>
 
