Correcciones de seguridad

--- a/src/app/components/snackbar/snackbar.component.html
+++ b/src/app/components/snackbar/snackbar.component.html
@@ -1,3 +1,3 @@
 <span class="error-message">
-    {{data.data.message}}
+    {{data.data.message}} <!-- EL DATA VIENE DE OTRO COMPONENTE -->
 </span>
