--- a/src/app/components/confirm/confirm.component.html
+++ b/src/app/components/confirm/confirm.component.html
@@ -1,10 +1,12 @@
+<!-- EL TITULO Y EL MENSAJE SON SETEADOS DESDE OTRO COMPONENTE -->
 <h1 mat-dialog-title>{{data.title}}</h1>
 <mat-dialog-content>
     {{data.message}}
 </mat-dialog-content>
 
 <br/>
-
+<!-- EL LOS BOTONES DEVUELVEN UN TRUE O FALSE AL COMPONENTE QUE ENVIA LA DATA,
+EL COMPONENTE QUE ENVIA LA DATA SE SUSCRIBE A LA RESPUESTA BOOLEANA DEL CONFIRM. -->
 <mat-dialog-actions>
     <button mat-button [mat-dialog-close]>Cancelar</button>
     <button mat-button [mat-dialog-close]="true">Si</button>
