--- a/src/app/modules/login-layout/login/login.component.css
+++ b/src/app/modules/login-layout/login/login.component.css
@@ -1,7 +1,8 @@
 mat-card {
-    max-width: 400px;
+    max-width: 300px;
     margin: 2em auto;
     text-align: center;
+    height: 400px;
 }
 .signin-content {
     padding: 60px 1rem;
