--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -17,8 +17,8 @@
     matSort matSortActive="name" matSortDisableClear matSortDirection="asc">
 
         <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-            <mat-cell *matCellDef="let row">{{ row.name }}</mat-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+            <mat-cell *matCellDef="let row">{{ row.first_name + ' ' + row.last_name }}</mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="age">
