Fix delete method, fix person form, add filter by age.

--- a/src/app/modules/person/forms/forms.component.css
+++ b/src/app/modules/person/forms/forms.component.css
@@ -11,3 +11,7 @@ mat-form-field {
     margin-top: 2vh;
     text-align: right;
 }
+
+.mat-radio-button ~ .mat-radio-button {
+    margin-left: 16px;
+  }
