Remove commented code.

--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -102,6 +102,7 @@
         [pageSizeOptions]="pageSizeOptions" 
         [length]="totalItems" 
         [pageSize]="pageSize"
-        (page)="onPaginateChange($event)">
+        (page)="onPaginateChange($event)"
+        [pageSizeOptions]="pageSizeOptions">
     </mat-paginator>
 </div>
