Change token manipulation.

--- a/src/app/components/confirm/confirm.component.html
+++ b/src/app/components/confirm/confirm.component.html
@@ -7,7 +7,7 @@
 <br/>
 <!-- EL LOS BOTONES DEVUELVEN UN TRUE O FALSE AL COMPONENTE QUE ENVIA LA DATA,
 EL COMPONENTE QUE ENVIA LA DATA SE SUSCRIBE A LA RESPUESTA BOOLEANA DEL CONFIRM. -->
-<mat-dialog-actions>
-    <button mat-button [mat-dialog-close]>Cancelar</button>
-    <button mat-button [mat-dialog-close]="true">Si</button>
+<mat-dialog-actions align="end">
+    <button mat-button [mat-dialog-close]>Cancel</button>
+    <button mat-button [mat-dialog-close]="true">Ok</button>
 </mat-dialog-actions>
