--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
         </mat-card-header>
     </mat-card>
 
-    <mat-card class="dashboard-item item-purple float-item">
+    <!-- <mat-card class="dashboard-item item-purple float-item">
         <i class="material-icons dashboard-icon">portrait</i>
         <mat-card-header>
             <mat-card-title><h1>Fotos</h1></mat-card-title>
@@ -62,5 +62,5 @@
             <mat-card-title><h1>Reportes</h1></mat-card-title>
             <mat-card-subtitle># reportes</mat-card-subtitle>
         </mat-card-header>
-    </mat-card>
+    </mat-card> -->
 </div>
