--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,8 +1,9 @@
 <div class="container animated fadeIn">
     <h2>ERROR #404</h2>
-    <img src="../../../../assets/img/404.jpg">
-    <br/><br/><br/>
+    <img src="assets/img/404.jpg">
+    <br /><br /><br />
     <button mat-raised-button color="warn" routerLink="/">
-        <span>REGRESAR</span><mat-icon aria-label="icon-button">directions_walk</mat-icon>
+        <span>REGRESAR</span>
+        <mat-icon aria-label="icon-button">directions_walk</mat-icon>
     </button>
 </div>
