--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -2,7 +2,9 @@
     <mat-card class="dashboard-item item-teal float-item" routerLink="/person">
         <i class="material-icons dashboard-icon">person</i>
         <mat-card-header>
-            <mat-card-title><h1>Personas</h1></mat-card-title>
+            <mat-card-title>
+                <h1>Personas</h1>
+            </mat-card-title>
             <mat-card-subtitle># personas</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
@@ -10,7 +12,9 @@
     <mat-card class="dashboard-item item-brown float-item">
         <i class="material-icons dashboard-icon">verified_user</i>
         <mat-card-header>
-            <mat-card-title><h1>Usuarios</h1></mat-card-title>
+            <mat-card-title>
+                <h1>Usuarios</h1>
+            </mat-card-title>
             <mat-card-subtitle># usuarios</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
