--- a/src/app/modules/login-layout/login/login.component.html
+++ b/src/app/modules/login-layout/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="signin-content animated fadeIn">
     <mat-card>
         <mat-card-content>
-            <img src="assets/img/1.png" width="200px">
+            <img src="assets/img/1.png" width="200px" onmousedown="return false;">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-form-field class="full-width-input">
                     <input matInput placeholder="User" formControlName="user_name" required>
