--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,6 +1,7 @@
 <div class="container animated fadeIn">
+    <!-- <img src="assets/img/404.jpg"> -->
+    <h1>🤕</h1>
     <h2>ERROR #404</h2>
-    <img src="assets/img/404.jpg">
     <br /><br /><br />
     <button mat-raised-button color="warn" routerLink="/">
         <span>REGRESAR</span>
