--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,34 @@
 
 body {
     margin: 0 !important;
+    background-color: rgb(235, 235, 235);
 }
+
+/* @media (prefers-color-scheme: dark) {
+    body {
+        background-color: black;
+    }
+
+    .mat-card {
+        background-color: #201f1f;
+    }
+
+    .mat-form-field-empty.mat-form-field-label {
+        color: #3F51B5;
+    }
+
+    .mat-form-field-underline {
+        background-color: #3F51B5 !important;
+    }
+
+    .mat-form-field-underline .mat-form-field-ripple{
+        background-color: #3F51B5 !important;
+    }
+
+    h1,h2,h3,h4 {
+        color: #3F51B5;
+    }
+} */
 
 /* ANIMACIÓN AL CARGAR UNA PÁGINA */
 .animated {
