--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -1,99 +1,98 @@
 <div class="animated fadeIn table-container mat-elevation-z20">
-    <!-- <button mat-fab color="primary" class="add-button" (click)="save(row)" align="end">
+  <!-- <button mat-fab color="primary" class="add-button" (click)="save(row)" align="end">
         <mat-icon>add</mat-icon>
     </button> -->
 
-    <mat-card class="example-card">
-        <mat-card-header>
-            <!-- <div mat-card-avatar class="example-header-image"></div> -->
-            <i class="material-icons">supervised_user_circle</i>
-            <mat-card-title>Person GRID</mat-card-title>
-            <mat-card-subtitle>Add, update & delete</mat-card-subtitle>
-        </mat-card-header>
-        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-        <mat-card-content>
-            <div class="table-loading-shade" *ngIf="isLoading">
-                <mat-spinner *ngIf="isLoading"></mat-spinner>
-            </div>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <!-- <div mat-card-avatar class="example-header-image"></div> -->
+      <i class="material-icons">supervised_user_circle</i>
+      <mat-card-title>Person GRID</mat-card-title>
+      <mat-card-subtitle>Add, update & delete</mat-card-subtitle>
+    </mat-card-header>
+    <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+    <mat-card-content>
+      <div class="table-loading-shade" *ngIf="isLoading">
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
+      </div>
 
-            <div class="table-header">
-                <mat-form-field class="filter-field">
-                    <input matInput (keyup)="applyFilter($event.target.value)"
-                           placeholder="Filter by name, age or gender" [(ngModel)]="value">
-                    <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear"
-                            (click)="value=''; applyFilter('')">
-                        <mat-icon>close</mat-icon>
-                    </button>
-                </mat-form-field>
+      <div class="table-header">
+        <mat-form-field class="filter-field">
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter by name, age or gender"
+            [(ngModel)]="value">
+          <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear"
+            (click)="value=''; applyFilter('')">
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-form-field>
 
-                <button mat-raised-button (click)="save(row)" align="end" style="margin-bottom: 15px;">
-                    <mat-icon>add</mat-icon> Add new
-                </button>
-            </div>
+        <button mat-raised-button (click)="save()" align="end" style="margin-bottom: 15px;">
+          <mat-icon>add</mat-icon> Add new
+        </button>
+      </div>
 
-            <mat-table #table [dataSource]="dataSource" class="person-table" matSort matSortActive="id"
-                       matSortDisableClear matSortDirection="asc">
+      <mat-table #table [dataSource]="dataSource" class="person-table" matSort matSortActive="id" matSortDisableClear
+        matSortDirection="desc">
+        <ng-container matColumnDef="id">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>No.</mat-header-cell>
+          <mat-cell *matCellDef="let row; let i = index;"> {{ i + 1 }} </mat-cell>
+        </ng-container>
 
-                <ng-container matColumnDef="id">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>No.</mat-header-cell>
-                    <mat-cell *matCellDef="let row; let i = index;"> {{ i + 1 }} </mat-cell>
-                </ng-container>
+        <ng-container matColumnDef="first_name">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.first_name + ' ' + row.last_name }}</mat-cell>
+        </ng-container>
 
-                <ng-container matColumnDef="first_name">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.first_name + ' ' + row.last_name }}</mat-cell>
-                </ng-container>
+        <ng-container matColumnDef="age">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Age</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.age }}</mat-cell>
+        </ng-container>
 
-                <ng-container matColumnDef="age">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Age</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.age }}</mat-cell>
-                </ng-container>
+        <ng-container matColumnDef="gender">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Gender</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.gender }}</mat-cell>
+        </ng-container>
 
-                <ng-container matColumnDef="gender">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Gender</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.gender }}</mat-cell>
-                </ng-container>
+        <ng-container matColumnDef="created">
+          <mat-header-cell *matHeaderCellDef>Created at</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.created_at | date:'dd/MM/yyyy' }}</mat-cell>
+        </ng-container>
 
-                <ng-container matColumnDef="created">
-                    <mat-header-cell *matHeaderCellDef>Created at</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.created_at | date:'dd/MM/yyyy' }}</mat-cell>
-                </ng-container>
-
-                <!-- State Column -->
-                <!-- <ng-container matColumnDef="active">
+        <!-- State Column -->
+        <!-- <ng-container matColumnDef="active">
                     <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
                     <mat-cell *matCellDef="let row">{{ row.active }}</mat-cell>
                 </ng-container> -->
 
-                <!-- actions-->
-                <ng-container matColumnDef="personid">
-                    <mat-header-cell *matHeaderCellDef>
-                        Actions
-                    </mat-header-cell>
+        <!-- actions-->
+        <ng-container matColumnDef="personid">
+          <mat-header-cell *matHeaderCellDef>
+            Actions
+          </mat-header-cell>
 
-                    <mat-cell *matCellDef="let row">
-                        
-                        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Click to see more actions">
-                            <i class="material-icons">more_vert</i>
-                        </button>
-                        <mat-menu #menu="matMenu">
-                            <button mat-menu-item (click)="edit(row)">
-                                <mat-icon aria-label="Edit">create</mat-icon> Edit
-                            </button>
-                            <button mat-menu-item (click)="delete(row)">
-                                <mat-icon aria-label="Delete">clear</mat-icon> Delete
-                            </button>
-                        </mat-menu>
-                    </mat-cell>
-                </ng-container>
+          <mat-cell *matCellDef="let row">
 
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-            </mat-table>
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Click to see more actions">
+              <i class="material-icons">more_vert</i>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="edit(row)">
+                <mat-icon aria-label="Edit">create</mat-icon> Edit
+              </button>
+              <button mat-menu-item (click)="delete(row)">
+                <mat-icon aria-label="Delete">clear</mat-icon> Delete
+              </button>
+            </mat-menu>
+          </mat-cell>
+        </ng-container>
 
-            <mat-paginator [pageSizeOptions]="pageSizeOptions" [length]="totalItems" [pageSize]="pageSize"
-                           (page)="onPaginateChange($event)">
-            </mat-paginator>
-        </mat-card-content>
-    </mat-card>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+
+      <mat-paginator [pageSizeOptions]="pageSizeOptions" [length]="totalItems" [pageSize]="pageSize"
+        (page)="onPaginateChange($event)">
+      </mat-paginator>
+    </mat-card-content>
+  </mat-card>
 </div>
